# anthropic-perf-sandbox

./: cloudbuild.yaml  pyproject.toml  task_perf_takehome.py  trajectory_writer.py
container/: Dockerfile  load-sandbox-images.sh
sandbox/: Dockerfile  compose_easy.yaml  compose_standard.yaml  entrypoint.sh  push_image.sh
sandbox_easy/: frozen_problem.py
sandbox_standard/: perf_takehome_preoptimized.py  perf_vectorized.py
